// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoList should correctly render 1`] = `
<TodoListComponent
  todos={
    Array [
      Object {
        "description": "Guys",
        "id": 0,
        "title": "Hi",
      },
      Object {
        "description": "Item",
        "id": 1,
        "title": "Another",
      },
    ]
  }
>
  <div>
    <styled.div
      key="0"
    >
      <div
        className="sc-bdVaJa kZAgjJ"
      >
        <styled.input
          onBlur={[Function]}
          onChange={[Function]}
          value="Hi"
        >
          <input
            className="sc-bwzfXH euLWQW"
            onBlur={[Function]}
            onChange={[Function]}
            value="Hi"
          />
        </styled.input>
        <styled.input
          onBlur={[Function]}
          onChange={[Function]}
          value="Guys"
        >
          <input
            className="sc-htpNat lksuPj"
            onBlur={[Function]}
            onChange={[Function]}
            value="Guys"
          />
        </styled.input>
        <div
          onClick={[Function]}
        >
          x
        </div>
      </div>
    </styled.div>
    <styled.div
      key="1"
    >
      <div
        className="sc-bdVaJa kZAgjJ"
      >
        <styled.input
          onBlur={[Function]}
          onChange={[Function]}
          value="Another"
        >
          <input
            className="sc-bwzfXH euLWQW"
            onBlur={[Function]}
            onChange={[Function]}
            value="Another"
          />
        </styled.input>
        <styled.input
          onBlur={[Function]}
          onChange={[Function]}
          value="Item"
        >
          <input
            className="sc-htpNat lksuPj"
            onBlur={[Function]}
            onChange={[Function]}
            value="Item"
          />
        </styled.input>
        <div
          onClick={[Function]}
        >
          x
        </div>
      </div>
    </styled.div>
  </div>
</TodoListComponent>
`;

exports[`TodoList should correctly render 2`] = `
<div>
  <div
    class="sc-bdVaJa kZAgjJ"
  >
    <input
      class="sc-bwzfXH euLWQW"
      value="Hi"
    />
    <input
      class="sc-htpNat lksuPj"
      value="Guys"
    />
    <div>
      x
    </div>
  </div>
  <div
    class="sc-bdVaJa kZAgjJ"
  >
    <input
      class="sc-bwzfXH euLWQW"
      value="Another"
    />
    <input
      class="sc-htpNat lksuPj"
      value="Item"
    />
    <div>
      x
    </div>
  </div>
</div>
`;

exports[`TodoList should correctly render 3`] = `
<div>
  <styled.div
    key="0"
  >
    <styled.input
      onBlur={[Function]}
      onChange={[Function]}
      value="Hi"
    />
    <styled.input
      onBlur={[Function]}
      onChange={[Function]}
      value="Guys"
    />
    <div
      onClick={[Function]}
    >
      x
    </div>
  </styled.div>
  <styled.div
    key="1"
  >
    <styled.input
      onBlur={[Function]}
      onChange={[Function]}
      value="Another"
    />
    <styled.input
      onBlur={[Function]}
      onChange={[Function]}
      value="Item"
    />
    <div
      onClick={[Function]}
    >
      x
    </div>
  </styled.div>
</div>
`;
